views_subdir = join_paths(moduledir, 'views')

subdir('commands')

views_sources = [
    '__init__.py',
    'image_drop_page.py',
    'dropped_image.py',
    'blob_image.py',
    'command_panel.py',
    'display_image.py',
    'history_panel.py',
    'save_dialog.py',
]

install_data(views_sources, install_dir: views_subdir)