commmands_subdir = join_paths(views_subdir, 'commands')

commmands_sources = [
    '__init__.py',
    'amount_method.py',
    'angle.py',
    'auto_threshold.py',
    'blur.py',
    'color_alpha.py',
    'color_threshold_start_stop.py',
    'color_threshold.py',
    'crop.py',
    'factor.py',
    'fx.py',    
    'kmeans.py',
    'low_high_white_black.py',
    'low_high.py',
    'noise.py',
    'ordered_dither.py',
    'polaroid.py',
    'posterize.py',
    'quantize.py',
    'radius_sigma_amount_threshold.py',
    'radius_sigma_angle.py',
    'radius_sigma_threshold.py',
    'radius_sigma_xy.py',
    'radius_sigma.py',
    'radius.py',
    'resize.py',
    'rotate.py',
    'shade.py',
    'sharpen.py',
    'statistic.py',
    'threshold_softness.py',
    'threshold.py',
    'thresholds.py',
    'wave.py',
    'width_height_offset.py',
]

install_data(commmands_sources, install_dir: commmands_subdir)